--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,31 @@ code {
     monospace;
 }
 
+header img{
+  width:350px;
+}
+.main-banner h1{
+  font-size: 4rem;
+}
+.main-banner h2{
+  font-size: 2rem;
+}
+@media(max-width:768px){
+  .main-banner h1{
+    font-size: 2.5rem;
+  }
+  .main-banner h2{
+    font-size: 1.5rem;
+  }
+  header img{
+    width:250px;
+  }
+
+  .navbar-nav a{
+    text-align: center;
+    padding-top: 0.7rem;
+    
+  }
+
+  
+}
