--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,14 @@ header img{
 .main-banner h2{
   font-size: 2rem;
 }
+
+.dedicamos h1{
+  font-size: 3.3rem;
+}
+
+.hola h1{
+  font-size: 3.3rem;
+}
 @media(max-width:768px){
   .main-banner h1{
     font-size: 2.5rem;
@@ -35,8 +43,14 @@ header img{
   .navbar-nav a{
     text-align: center;
     padding-top: 0.7rem;
-    
   }
 
-  
+  .dedicamos h1{
+    font-size: 2.5rem;
+  }
+
+
+.hola h1{
+  font-size: 2.3rem;
+}
 }
